Add swagger Bearer auth, Users service body validation
